[gd_scene load_steps=9 format=3 uid="uid://d4cyoim416nt3"]

[ext_resource type="Theme" uid="uid://d24xi7m4k637h" path="res://theme/default_theme.tres" id="1_6agiu"]
[ext_resource type="Script" path="res://scenes/main.gd" id="2_kk1n7"]
[ext_resource type="Texture2D" uid="uid://bins5mvi4nspv" path="res://resources/sprites/landscape.jpg" id="3_0y0ht"]
[ext_resource type="PackedScene" uid="uid://by3j8l8vci052" path="res://scenes/ui/components/char_stats.tscn" id="3_3krfl"]
[ext_resource type="PackedScene" uid="uid://dgyp53n3k4kvp" path="res://scenes/ui/components/inventory.tscn" id="3_o21jy"]
[ext_resource type="FontFile" uid="uid://3laylbry7cvb" path="res://theme/Fonts/Inter-VariableFont_slnt,wght.ttf" id="5_i4neu"]
[ext_resource type="PackedScene" uid="uid://cchf1y12qq15v" path="res://scenes/player/player.tscn" id="6_h4ajn"]

[sub_resource type="Theme" id="Theme_488ol"]
default_font = ExtResource("5_i4neu")

[node name="Root" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_6agiu")
script = ExtResource("2_kk1n7")

[node name="BigTestButton" type="Button" parent="."]
top_level = true
layout_mode = 0
offset_left = 8.0
offset_top = 79.0
offset_right = 203.0
offset_bottom = 107.0
text = "TEST SOMETHING HERE"

[node name="MainScene" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="MainScene"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -139.0
offset_right = 1144.0
offset_bottom = 608.0
grow_vertical = 0
texture = ExtResource("3_0y0ht")

[node name="Inventory" parent="MainScene" instance=ExtResource("3_o21jy")]
offset_left = 528.0
offset_top = 368.0
offset_right = 568.0
offset_bottom = 408.0
scale = Vector2(0.5, 0.5)

[node name="Char Stats" parent="MainScene" instance=ExtResource("3_3krfl")]
offset_left = 8.0
offset_top = 368.0
offset_right = 48.0
offset_bottom = 408.0

[node name="Button" type="Button" parent="MainScene"]
layout_mode = 0
offset_left = 1019.0
offset_top = 331.0
offset_right = 1144.0
offset_bottom = 359.0
text = "Get More Items"

[node name="FightButton" type="Button" parent="MainScene"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 944.0
offset_top = 8.0
offset_right = 1104.0
offset_bottom = 60.0
grow_horizontal = 0
theme = SubResource("Theme_488ol")
theme_override_font_sizes/font_size = 36
text = "FIGHT"

[node name="Player" parent="MainScene" instance=ExtResource("6_h4ajn")]
position = Vector2(576, 128)
scale = Vector2(0.75, 0.75)

[connection signal="pressed" from="BigTestButton" to="." method="_on_big_test_button_pressed"]
[connection signal="pressed" from="MainScene/Button" to="MainScene/Inventory" method="_on_button_pressed"]
[connection signal="pressed" from="MainScene/FightButton" to="." method="_on_fight_button_pressed"]
